--- a/src/templates/member_ship.html
+++ b/src/templates/member_ship.html
@@ -1,5 +1,5 @@
 <div class="scrollable">
-    <div class="scrollable-content member-ship-content" scroll>
+    <div ng-init="vm.getInfo('member_ship')" class="scrollable-content member-ship-content" scroll>
         <div class="detail-title">
             <img src="images/ad1.jpg">
             <div class="title-desc">
