--- a/src/less/list.less
+++ b/src/less/list.less
@@ -28,7 +28,7 @@
     }
 
     .list-cont {
-        padding: 10px;
+        padding: 10px 10px 60px 10px;
         overflow: hidden;
         .list-item {
             float: left;
