--- a/src/templates/member_info.html
+++ b/src/templates/member_info.html
@@ -1,5 +1,5 @@
 <div class="scrollable">
-    <div class="scrollable-content member-ship-content member-info-content" scroll>
+    <div ng-init="vm.getInfo('member_info')" class="scrollable-content member-ship-content member-info-content" scroll>
         <div class="detail-item-group">
             <div class="detail-item">
                 名称：{{vm.userinfo.username}}
