--- a/src/templates/add_shopping_cart.html
+++ b/src/templates/add_shopping_cart.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </div>
-            <div class="setup-item">
+            <div ng-hide="true" class="setup-item">
                 <div class="select-title-left">
                     研磨：
                 </div>
@@ -36,7 +36,7 @@
                     <ui-switch  ng-model="vm.productInfo.grind"></ui-switch>
                 </div>
             </div>
-            <div class="setup-item">
+            <div ng-hide="true" class="setup-item">
                 <div class="select-title">
                     研磨程度：
                 </div>
