--- a/src/less/main.less
+++ b/src/less/main.less
@@ -104,3 +104,13 @@
         }
     }
 }
+
+.shop_cart_tip {
+    position: absolute;
+    width: 46px;
+    height: 45px;
+    right: 10px;
+    top: -95px;
+    background: url(../images/maifei_cart.png) no-repeat;
+    background-size: 46px 45px;
+}
