--- a/src/less/edit_shopping_cart.less
+++ b/src/less/edit_shopping_cart.less
@@ -22,30 +22,30 @@
                 a {
                     float: right;
                     font-size: 14px;
-                    color: #26aef9;
+                    color: #f00;
                 }
             }
             .product-desc-wrap {
                 .display-flex();
                 .clear-float();
-                .product-choose {
-                    width: 30px;
-                    float: left;
-                    font-size: 40px;
-                    text-align: center;
-                    span {
-                        display: block;
-                        border: 1px solid #4cd964;
-                        margin: 10px 0 0 5px;
-                        width: 20px;
-                        height: 20px;
-                        .border-radius(10px);
-                        &.select-product {
-                            background: url(../images/check.png) no-repeat -1px -1px;
-                            background-size: 20px 20px;
-                        }
-                    }
-                }
+                // .product-choose {
+                //     width: 30px;
+                //     float: left;
+                //     font-size: 40px;
+                //     text-align: center;
+                //     span {
+                //         display: block;
+                //         border: 1px solid #4cd964;
+                //         margin: 10px 0 0 5px;
+                //         width: 20px;
+                //         height: 20px;
+                //         .border-radius(10px);
+                //         &.select-product {
+                //             background: url(../images/check.png) no-repeat -1px -1px;
+                //             background-size: 20px 20px;
+                //         }
+                //     }
+                // }
                 .product-desc {
                     .flex-item();
                     position: relative;
@@ -87,25 +87,25 @@
     border-top: 1px solid #ccc;
     .box-shadow(0 2px 5px #666);
     .clear-float();
-    .select-product {
-        float: left;
-        padding-right: 10px;
-        color: #f60;
-        span {
-            position: relative;
-            top: 5px;
-            display: inline-block;
-            border: 1px solid #4cd964;
-            width: 20px;
-            height: 20px;
-            margin-right: 5px;
-            .border-radius(10px);
-            &.select-all-product {
-                background: url(../images/check.png) no-repeat -1px -1px;
-                background-size: 20px 20px;
-            }
-        }
-    }
+    // .select-product {
+    //     float: left;
+    //     padding-right: 10px;
+    //     color: #f60;
+    //     span {
+    //         position: relative;
+    //         top: 5px;
+    //         display: inline-block;
+    //         border: 1px solid #4cd964;
+    //         width: 20px;
+    //         height: 20px;
+    //         margin-right: 5px;
+    //         .border-radius(10px);
+    //         &.select-all-product {
+    //             background: url(../images/check.png) no-repeat -1px -1px;
+    //             background-size: 20px 20px;
+    //         }
+    //     }
+    // }
     .total-price {
         .flex-item();
         color: #f60;
