--- a/src/less/list.less
+++ b/src/less/list.less
@@ -84,4 +84,10 @@
             margin-right: 0;
         }
     }
+    .low-list-cont .list-item {
+        height: 220px;
+        h4 {
+            height: 36px;
+        }
+    }
 }
