--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -60,7 +60,7 @@
     <div ng-click="vm.buyIt()" class="btn btn-danger">
         立即购买
     </div>
-    <div ng-click="go('/add_shopping_cart')" class="btn btn-default">
+    <div ng-click="vm.addCart()" class="btn btn-default">
         加入购物车
     </div>
 </div>
