--- a/src/templates/edit_shopping_cart.html
+++ b/src/templates/edit_shopping_cart.html
@@ -9,7 +9,7 @@
 <div class="scrollable">
     <div class="scrollable-content edit-cart-content" scroll>
 
-        <div ng-init="vm.initList(false)" class="tab-cont" ui-if="activeTab == 1">
+        <div ng-init="vm.initList(true)" class="tab-cont" ui-if="activeTab == 1">
             <div ng-repeat="p in vm.products" class="edit-cart-item">
                 <div class="product-title">订单时间：{{p.product.createDate | humanDate}}<a ng-click="vm.deleteProduct(p.product.id)" href="javascript:;">删除</a></div>
                 <div class="product-desc-wrap">
