--- a/src/templates/edit_shopping_cart.html
+++ b/src/templates/edit_shopping_cart.html
@@ -18,7 +18,7 @@
                         {{p.product.fullName}}
                         <!-- <span>{{p.select_weight}}</span> -->
                     </div>
-                   <div class="product-price">￥{{p.product.price}}<span>x{{p.product.buy_num}}</span></div>
+                   <div class="product-price">￥{{p.price}}<span>x{{p.quantity}}</span></div>
                 </div> 
             </div>
         </div>
