--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -22,7 +22,7 @@
   <div class="scrollable">
     <div class="scrollable-content" scroll>
       <div class="list-banner">
-        <img src="{{vm.adImage}}" alt=""/>
+        <img ng-src="{{vm.adImage}}" alt=""/>
       </div>
 
       <div class="list-cont" ng-class="{'low-list-cont':2==vm.type}">
