--- a/src/templates/pay_order.html
+++ b/src/templates/pay_order.html
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <div class="pay-order-word"><textarea ng-model="vm.memo" placeholder=""></textarea></div>
+        <div class="pay-order-word"><textarea ng-model="vm.memo" placeholder="请输入留言"></textarea></div>
 
         <div class="pay-order-total">
             合计<span>￥{{vm.totalPrice}}</span>
