--- a/src/less/list.less
+++ b/src/less/list.less
@@ -26,6 +26,9 @@
         padding: 60px 10px 0;
         border-top: 1px solid #fff;
     }
+    .list-banner-notop {
+        padding-top: 0;
+    }
 
     .list-cont {
         padding: 10px 10px 60px 10px;
