--- a/src/less/list.less
+++ b/src/less/list.less
@@ -17,8 +17,10 @@
             right: 0;
             top: 5px;
             height: 34px;
-            width: 40px;
             padding: 3px 10px 0;
+            .fa-map-marker {
+                margin-left: 5px;
+            }
         }
     }
 
