--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -1,8 +1,9 @@
 <section class="list-container">
   <div ng-hide="vm.type == 2" class="list-nav">
-    <div href="javascript:;" class="btn btn-navbar">
+    <div class="btn btn-navbar">
     <span ui-turn-on='listDropdown'>{{vm.selectLevel}}级咖啡豆<i class="fa fa-chevron-circle-down"></i></span>
     <ul 
+      id ="level_selector"
       class="dropdown-menu"
       ui-outer-click="Ui.turnOff('listDropdown')"
       ui-outer-click-if="Ui.active('listDropdown')"
@@ -10,7 +11,7 @@
       ui-show="listDropdown" 
       ui-state="listDropdown"
       ui-turn-off="listDropdown">
-      <li ng-repeat="l in vm.levels"><a ng-click="vm.doSelectLevel('{{l}}')" href="javascript:;">{{l}}</a></li>
+      <li ng-repeat="l in vm.levels"><a ng-click="vm.doSelectLevel('{{l}}')">{{l}}</a></li>
     </ul>
     </div>
 
